deploy/pre-ngsa-asb-eastus/monitoring/thanos/thanos-compactor-ss-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: thanos-compactor
    namespace: monitoring
spec:
  template:
    spec:
      containers:
        - name: thanos-compactor
          image: acraksri3aov7twb4uy.azurecr.io/thanos/thanos:v0.23.0
