deploy/pre-ngsa-asb-eastus/monitoring/thanos/thanos-deploy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: thanos-query
    namespace: monitoring
spec:
  template:
    spec:
      containers:
        - name: thanos-query
          image: acraksri3aov7twb4uy.azurecr.io/thanos/thanos:v0.23.0
          args:
            - query
            - --log.level=debug
            - --query.auto-downsampling
            - --query.replica-label=prometheus_replica
            - --store=thanos-grpc-eastus-pre.austinrdc.dev:443
            - --store=thanos-store-grpc-eastus-pre.austinrdc.dev:443
            - --store=thanos-grpc-westus3-pre.austinrdc.dev:443
            - --store=thanos-grpc-northcentralus-pre.austinrdc.dev:443
            - --grpc-client-tls-secure
            - --grpc-address=0.0.0.0:10901
            - --http-address=0.0.0.0:10902
            - --query.partial-response
