deploy/pre-ngsa-asb-eastus/monitoring/thanos/thanos-store-ss-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: thanos-store
    namespace: monitoring
spec:
  template:
    spec:
      containers:
        - name: thanos-store
          image: acraksri3aov7twb4uy.azurecr.io/thanos/thanos:v0.23.0
