deploy/pre-ngsa-asb-eastus/monitoring/thanos/thanos-vs-patch.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: thanos-store-grpc-vs
  namespace: monitoring
spec:
  hosts:
  - thanos-store-grpc-eastus-pre.austinrdc.dev
